Upgraded JUnit and POM plugins.